--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Flask-Migrate==4.0.5
 Flask-Login==0.6.3
 Flask-Bcrypt==1.0.1
 Flask-SocketIO==5.3.6
+eventlet==0.33.3
 psycopg2-binary==2.9.9
 python-dotenv==1.0.0
 gunicorn==21.2.0
