Add Converted/ folder to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,7 @@ backups/
 
 # Documentation with large PDFs
 Documentation/
+
+# Converted folder (temporary conversion files)
+Converted/
+convert/
