chore(gitignore): ignore venv variants and runtime reports; docs(cache): update data/dictionary.json with latest entries

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,11 @@ venv/
 env/
 ENV/
 .venv/
+.venv*/
+
+# Runtime safety logs/reports (not source data)
+data/content_violations.json
+data/guardian_reports/
 
 # IDE
 .vscode/
